<resources>
    <string name="app_name">Aplikasi Forum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="askedBy">Penanya</string>
    <string name="emailRequired">Email harus diisi</string>
    <string name="firstNameRequired">Nama depan harus diisi</string>
    <string name="lastNameRequired">Nama belakang harus diisi</string>
    <string name="passwordRequired">Password harus diisi</string>
    <string name="emailNotValid">Email tidak valid</string>
    <string name="passwordTooShort">Pasword harus lebih dari 5 karakter</string>
    <string name="verificationEmailSent">Email Verifikasi telah dikirim</string>
    <string name="verified">Sudah verifikasi</string>
    <string name="pleaseVerifyYourEmail">Mohon verifikasi email anda terlebih dahulu</string>
    <string name="resendEmail">Kirim ulang Email</string>
    <string name="back">Kembali</string>
    <string name="emailVerificationNotSent">Email anda belum terverifikasi</string>
    <string name="profile">Profil</string>
    <string name="npm9char">Npm harus 9 karakter</string>
    <string name="firstName">Nama depan</string>
    <string name="lastName">Nama belakang</string>
    <string name="search">Cari</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="dummy">dummy</string>
    <string name="save_edit">Simpan Perubahan</string>
    <string name="info">Info</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="chat">Pesan</string>
    <string name="detail">Detail</string>
    <string name="logout">Keluar</string>
    <string name="question">Pertanyaan</string>
    <string name="questionTitle">Judul Pertanyaan</string>
    <string name="save">Simpan</string>
    <string name="txtconfirmationlogout">Apakah anda yakin ingin keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Iya</string>
    <string name="time">Waktu</string>
    <string name="txtDeleteImageConfirmation">Hapus foto profil anda?</string>
    <string name="editProfile">Edit Profile</string>
    <string name="myquestion">Pertanyaan saya</string>
    <string name="myAnswer">Jawaban saya</string>
    <string name="bookmark">Disimpan</string>
    <string name="setting">Pengaturan</string>
    <string name="password">Password</string>
    <string name="confpassword">Password dan konfirmasi password harus sama</string>
    <string name="confPasswordRequired">Konfirmasi password harus diisi</string>
    <string name="language_key" translatable="false">languangekey</string>
    <string name="change_language">Change Language</string>
    <string name="language">Indonesia</string>
    <string name="settings">Settings</string>
    <string name="username">Nama Pengguna</string>
    <string name="profilepict">Foto Profil</string>
    <string name="answer">Jawaban</string>
    <string name="views">Dilihat</string>
    <string name="edited">Diedit</string>
    <string name="dataEmpty">Data tidak tersedia</string>
    <string name="error">Terjadi kesalahan</string>
    <string name="posted">diposting</string>
    <string name="answered">Dijawab</string>
    <string name="you">Anda</string>
    <string name="snackbarThanks">Thanks for your response</string>
    <string name="snackbarDelete">Your response has been delete</string>
    <string name="myQuestion">My Question</string>
    <string name="choose_teacher">Pilih Dosen</string>
    <string name="student_register">Daftar Mahasiswa</string>
    <string name="register_lecturer">Daftar Dosen</string>
    <string name="lecturer_name">Nama dosen</string>
    <string name="subject">Mata Kuliah</string>
    <string name="have_account">Sudah punya akun? Masuk</string>
    <string name="register">Daftar</string>
    <string name="confirm_pass">Konfirmasi sandi</string>
    <string name="welcome">Selamat datang</string>
    <string name="name_empty">Nama tidak boleh kosong</string>
    <string name="infoRequired">Info tidak boleh kosong</string>
    <string name="subjectRequired">Mata kuliah wajib diisi</string>
    <string name="register_as">Daftar sebagai</string>
    <string name="lecturer">Dosen</string>
    <string name="student">Mahasiswa</string>
    <string name="not_finish">Belum selesai</string>
    <string name="tags" translatable="false">Tags (Opsional)</string>
    <string name="noQuestion">Tidak ada pertanyaan</string>
    <string name="report">Report</string>
    <string name="resultNotFound">Hasil pencarian tidak ditemukan</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Pengaturan</string>
    <string name="default_notification_channel_id">CHANNEL_ID</string>
    <string name="change_password">Ubah sandi</string>
    <string name="old_password">Sandi lama</string>
    <string name="new_password">Sandi baru</string>
    <string name="confnewpassword">Kofirmasi sandi baru</string>
    <string name="confpassincorect">Konfirmasi sandi salah</string>
    <string name="required">diperlukan</string>
    <string name="passhaschanged">Sandi berhasil diubah</string>
    <string name="passfailedtochange">Sandi gagal diubah</string>
    <string name="add_question">Tambahkan pertanyaan</string>
    <string name="retry">Ulangi</string>
    <string name="profileImageDeleted">Foto profil dihapus</string>
    <string name="profileImageDeleteError">Photo profil gagal dihapus</string>
    <string name="profileImageChanged">Foto profil diubah</string>
    <string name="logo">Logo</string>
    <string name="npm">Npm</string>
    <string name="e_mail">E-Mail</string>
    <string name="capture">capture</string>
    <string name="ubah_kamera">Rotate camera</string>
    <string name="verifiedThisAnswer">Verifikasi</string>
    <string name="reportThisAnswer">Laporkan</string>
    <string name="delete">Hapus</string>
</resources>