<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_forum"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:cardUseCompatPadding="true"
    android:padding="16dp"
    android:orientation="vertical"
    style="@style/backgroundGrey">

    <TextView
        android:id="@+id/choose_dosen"
        style="@style/titleColor"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/register_as"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        style="@style/ButtonGeneralProfile"
        android:id="@+id/btn_lecturer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/lecturer"
        />

    <Button
        style="@style/ButtonGeneralProfile"
        android:id="@+id/btn_student"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/student"
        />

</androidx.appcompat.widget.LinearLayoutCompat>