<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background3"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterStudentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/logo"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintBottom_toTopOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/background2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-3dp"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <ImageView
                android:contentDescription="@string/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:alpha="0.3"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/student_register"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/text_input_layout1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textLayout"
                    android:hint="@string/npm"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <EditText
                        android:id="@+id/etNpm"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Npm"
                        android:hint="@string/npm"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout2"
                    style="@style/textLayout"
                    android:hint="@string/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout1">

                    <EditText
                        android:id="@+id/etFirstName"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/firstName"
                        android:hint="@string/firstName"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout3"
                    style="@style/textLayout"
                    android:hint="@string/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout2">

                    <EditText
                        android:id="@+id/etLastName"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/lastName"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout4"
                    style="@style/textLayout"
                    android:hint="@string/e_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout3">

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Email"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout5"
                    style="@style/textLayout"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout4"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Password"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout6"
                    style="@style/textLayout"
                    android:hint="@string/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout5"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Password"
                        android:hint="@string/confirm_pass"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/ButtonGeneral3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/register"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/text_input_layout6"
                    app:layout_constraintStart_toStartOf="@+id/text_input_layout6"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout6" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/btnLogin"
            style="@style/ButtonGeneral2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/have_account"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>